--- a/ports/degaart-freetds/degaart-freetdsConfig.cmake.in
+++ b/ports/degaart-freetds/degaart-freetdsConfig.cmake.in
@@ -17,7 +17,7 @@ get_filename_component(_IMPORT_PREFIX "${_IMPORT_PREFIX}" PATH)
 add_library(degaart_freetds::ct UNKNOWN IMPORTED)
 find_library(FREETDS_LIB_RELEASE NAMES ct PATHS "${_IMPORT_PREFIX}/lib/" REQUIRED NO_DEFAULT_PATH)
 set_target_properties(degaart_freetds::ct PROPERTIES
-  INTERFACE_INCLUDE_DIRECTORIES "${_IMPORT_PREFIX}/include ${Iconv_INCLUDE_DIRS}"
+  INTERFACE_INCLUDE_DIRECTORIES "${_IMPORT_PREFIX}/include;${Iconv_INCLUDE_DIRS}"
   INTERFACE_LINK_LIBRARIES "${Iconv_LIBRARIES}"
   IMPORTED_LINK_INTERFACE_LANGUAGES "C"
   IMPORTED_LOCATION_RELEASE "${FREETDS_LIB_RELEASE}"
